Final UI overhaul, primarily fixing issues with dark mode not applying to dropdown menus and the product serial number label. Also made the carousel buttons visible in both dark and light modes. Removed non-essentials such as the dropdown menu file, the save/unsaved indicator, the administrator user role, and the extra production log button in the login screen.

--- a/MESS/MESS.Blazor/wwwroot/app.css
+++ b/MESS/MESS.Blazor/wwwroot/app.css
@@ -232,6 +232,14 @@ h1:focus {
     align-items: center;
 }
 
+.carousel-control-next-icon {
+    background-color: gray;
+}
+
+.carousel-control-prev-icon {
+    background-color: gray;
+}
+
 @media (max-width: 768px) {
     .top-right-corner {
         top: 15px; 
@@ -243,8 +251,16 @@ h1:focus {
     background-color: transparent !important;
 }
 
-.label::after {
-    background-color: inherit !important;
+.serial-label::after {
+    background-color: transparent !important;
+}
+
+.dark-mode .serial-label::after {
+    background-color: transparent !important;
+}
+
+.dark-mode .serial-label {
+    color: #ffffff !important;
 }
 
 table tbody tr {
@@ -254,4 +270,25 @@ table tbody tr {
 
 td {
     white-space: nowrap;
+}
+
+.optional-notes-container {
+    position: relative;
+    left: 645px; 
+    width: 615px; 
+}
+
+.form-select {
+    background-color: #ffffff;
+    color: black;
+}
+
+.dark-mode .form-select {
+    background-color: #2c2c2c;
+    color: #ffffff;
+    border: 1px solid rgba(255, 213, 2, 0);
+}
+
+.form-control {
+    width: 100%;
 }
